@@ -1,7 +1,9 @@
 DIST upkern-3.1.8.tar.bz2 18331 RMD160 6982883ff920b91069a018832cf05cc9fcc6e7d1 SHA1 23e103094c7151f09f9332032516680ef67fc0de SHA256 fb411c96c8a5e8f9c0f1d99af91abfad16d862135870bcb91b113b0897f19884
 DIST upkern-3.1.9.tar.gz 20215 RMD160 f5f6190372c9a067d397bbe05f99b05e7212161b SHA1 90dd99a982729c5a27f3d97ddc4ed40e5c54925e SHA256 791c39279b019b285afc1ae7dd409e498909b1a1fd3e115a93967fc040cdaccd
+DIST upkern-4.0.0.tar.bz2 10781 RMD160 bdcc7fa1d95b8a7baf4374dcf18c71a5f1a989a6 SHA1 b17c66f034fd02b0c60e314ff0f8e8c9141b8983 SHA256 932cd33cabdc206d17c6f5a688014c018777cd6fff49a90f004e90585f88716c
 EBUILD upkern-3.1.8.ebuild 830 RMD160 4c95c1193cfbcd68899ffd1bd910663572e0e79e SHA1 bdbf548ad52a308df62d7095d4612292e103b387 SHA256 3bf6565960b3e3d459fcefadc8c469f3f69e1d6f902362cfa7297986a2eefeaf
 EBUILD upkern-3.1.9.ebuild 859 RMD160 576d7886aa7cd6c7f7c7eeb5032cbb8db5334386 SHA1 efd10847107f1cea8cf42898f4bfa84fde09a5ad SHA256 a7e08e28440b45245e59c219c87a26cc8b7cccd7e0ecece074b2414bc1e254d8
+EBUILD upkern-4.0.0.ebuild 631 RMD160 d33c350b8df269b69578459a2be5d9d4dae979bc SHA1 e1f835eaa0b6546421d9a3ab1096545292cd3cfa SHA256 c3dd088ad9a740ce36652f41e4caf156ad09659e93b87bd74598890e0c827a0a
 EBUILD upkern-9999.ebuild 595 RMD160 14a70b87c7b40e47445f1485642bd7568034ad1e SHA1 080174199befb0fc82b574cc617e83d83c77fe1b SHA256 628704c3b1b2a2628b3c3ea30ee1ebfe863360c694745203590eddeecd103134
-MISC ChangeLog 2943 RMD160 0685c74b40be26933db6c1ad20ce55830e2af755 SHA1 1676556d46568cdbb0aff666068b8c4632290bf5 SHA256 68349d0a3349c0fc920f68674e60ab439b81c70520037358e5598d24e0593a36
+MISC ChangeLog 3064 RMD160 5c36bc3b88c351fe841ee2e029063263be94f287 SHA1 580a343dc9ff499d5ce6580fa9036f75e37ed262 SHA256 390f05beb50814e498fd7776b633835883963aa2e7e892bf5914cdff57fb8e4d
 MISC metadata.xml 461 RMD160 40a4b831510c1f251095f6972e96260b39020cff SHA1 95e1e29d323fbb6511a26c2c9ade93c19a9bf100 SHA256 2610c87e47dd4156c2fa3b7c2eb5767a62ff4efac3a88c6f1416475acc963289
